--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-322.5KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇯🇵 日本-3.01MB/s(Youtube:不良林), server: 139.162.124.250, port: 28443, type: trojan, password: fca82897-b178-4824-9c75-abe60c103dda, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-382.6KB/s(Youtube:不良林), server: jp04.vproxy.us, port: 56565, type: trojan, password: acf34fb3-6fed-40c6-b6ab-b5bedf5827a2, sni: jp04.vproxy.us, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-1.15MB/s(Youtube:不良林), server: 51jp1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 51jp1.fans8.xyz}}
+  - {name: 🇸🇬 新加坡-348.8KB/s(Youtube:不良林), server: 129.226.217.215, port: 29971, type: vmess, uuid: 696085ad-1886-454b-eb65-db1743a8ec2c, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1008.0KB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
   - {name: 🇺🇸 美国-196.1KB/s(Youtube:不良林), server: 43.200.6.115, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
-  - {name: 🇭🇰 香港-2.58MB/s(Youtube:不良林), server: 511hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 511hk.fans8.xyz}}
-  - {name: 🇭🇰 香港-378.0KB/s(Youtube:不良林), server: 165.154.225.230, port: 33080, type: vmess, uuid: b8aaa6e1-f0b3-b9ec-3dfc-bb226c167b33, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
-  - {name: 未知国家-304.0KB/s(Youtube:不良林), server: awsxjp.moonfree.top, port: 443, type: vmess, uuid: 6e9eeae6-c3d1-439e-9f7a-213fe09b2dbe, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: awsxjp.moonfree.top}}
-  - {name: 🇯🇵 日本-5.01MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.69MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.14MB/s(Youtube:不良林), server: u4.anmu.one, port: 16199, type: vmess, uuid: 07ec59da-18ad-4224-8ad9-c5a66b1447a9, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-2.48MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇺🇸 美国-3.48MB/s(Youtube:不良林), server: u4.anmu.one, port: 16166, type: vmess, uuid: 8228550e-7f53-4809-8cb1-5f9420380d13, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-378.1KB/s(Youtube:不良林), server: 23.19.26.204, port: 55212, type: vmess, uuid: bb8a118d-dd20-4146-a989-2e24f1576b15, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /r76ofJah/, ws-headers: {Host: 23.19.26.204}}
+  - {name: 🇺🇸 美国-438.2KB/s(Youtube:不良林), server: 45.61.173.125, port: 31224, type: vmess, uuid: b8aaa6e1-f0b3-b9ec-3dfc-bb226c167b33, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.77MB/s(Youtube:不良林), server: kr01.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr01.wangxd.life, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-917.3KB/s(Youtube:不良林), server: 511hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 511hk.fans8.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-322.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.01MB/s(Youtube:不良林)
-      - 🇯🇵 日本-382.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.15MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-348.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1008.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-196.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.58MB/s(Youtube:不良林)
-      - 🇭🇰 香港-378.0KB/s(Youtube:不良林)
-      - 未知国家-304.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.01MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.14MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-378.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-438.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇭🇰 香港-917.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-322.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.01MB/s(Youtube:不良林)
-      - 🇯🇵 日本-382.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.15MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-348.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1008.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-196.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.58MB/s(Youtube:不良林)
-      - 🇭🇰 香港-378.0KB/s(Youtube:不良林)
-      - 未知国家-304.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.01MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.14MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-378.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-438.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇭🇰 香港-917.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-322.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.01MB/s(Youtube:不良林)
-      - 🇯🇵 日本-382.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.15MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-348.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1008.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-196.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.58MB/s(Youtube:不良林)
-      - 🇭🇰 香港-378.0KB/s(Youtube:不良林)
-      - 未知国家-304.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.01MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.14MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-378.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-438.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇭🇰 香港-917.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-2.58MB/s(Youtube:不良林)
-      - 🇭🇰 香港-378.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-917.3KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-322.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.01MB/s(Youtube:不良林)
-      - 🇯🇵 日本-382.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.15MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-348.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1008.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-196.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.58MB/s(Youtube:不良林)
-      - 🇭🇰 香港-378.0KB/s(Youtube:不良林)
-      - 未知国家-304.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.01MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.14MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-378.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-438.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇭🇰 香港-917.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-322.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.01MB/s(Youtube:不良林)
-      - 🇯🇵 日本-382.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.15MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-348.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1008.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-196.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.58MB/s(Youtube:不良林)
-      - 🇭🇰 香港-378.0KB/s(Youtube:不良林)
-      - 未知国家-304.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.01MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.14MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-378.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-438.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇭🇰 香港-917.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-322.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.01MB/s(Youtube:不良林)
-      - 🇯🇵 日本-382.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.15MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-348.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1008.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-196.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.58MB/s(Youtube:不良林)
-      - 🇭🇰 香港-378.0KB/s(Youtube:不良林)
-      - 未知国家-304.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.01MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.14MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-378.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-438.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇭🇰 香港-917.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-322.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.01MB/s(Youtube:不良林)
-      - 🇯🇵 日本-382.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.15MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-348.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1008.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-196.1KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.58MB/s(Youtube:不良林)
-      - 🇭🇰 香港-378.0KB/s(Youtube:不良林)
-      - 未知国家-304.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.01MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.14MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-378.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-438.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇭🇰 香港-917.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
