--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-348.8KB/s(Youtube:不良林), server: 129.226.217.215, port: 29971, type: vmess, uuid: 696085ad-1886-454b-eb65-db1743a8ec2c, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1008.0KB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-196.1KB/s(Youtube:不良林), server: 43.200.6.115, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
-  - {name: 🇺🇸 美国-4.14MB/s(Youtube:不良林), server: u4.anmu.one, port: 16199, type: vmess, uuid: 07ec59da-18ad-4224-8ad9-c5a66b1447a9, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-2.48MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇺🇸 美国-3.48MB/s(Youtube:不良林), server: u4.anmu.one, port: 16166, type: vmess, uuid: 8228550e-7f53-4809-8cb1-5f9420380d13, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-378.1KB/s(Youtube:不良林), server: 23.19.26.204, port: 55212, type: vmess, uuid: bb8a118d-dd20-4146-a989-2e24f1576b15, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /r76ofJah/, ws-headers: {Host: 23.19.26.204}}
-  - {name: 🇺🇸 美国-438.2KB/s(Youtube:不良林), server: 45.61.173.125, port: 31224, type: vmess, uuid: b8aaa6e1-f0b3-b9ec-3dfc-bb226c167b33, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.77MB/s(Youtube:不良林), server: kr01.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr01.wangxd.life, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-282.5KB/s(Youtube:不良林), server: 23.19.26.204, port: 55212, type: vmess, uuid: bb8a118d-dd20-4146-a989-2e24f1576b15, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /r76ofJah/, ws-headers: {Host: 23.19.26.204}}
   - {name: 🇭🇰 香港-917.3KB/s(Youtube:不良林), server: 511hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 511hk.fans8.xyz}}
+  - {name: 🇷🇺 俄罗斯联邦-524.9KB/s(Youtube:不良林), server: 213.183.53.177, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
+  - {name: 🇸🇬 新加坡-731.7KB/s(Youtube:不良林), server: 129.226.93.161, port: 40236, type: vmess, uuid: 931416fe-98f2-4098-c8e7-3634e27ce6f4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-438.2KB/s(Youtube:不良林), server: 45.61.173.125, port: 31224, type: vmess, uuid: b8aaa6e1-f0b3-b9ec-3dfc-bb226c167b33, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-515.6KB/s(Youtube:不良林), server: jgwcc2.gaox.ml, port: 443, type: trojan, password: 9c822f05-cfdc-479a-9534-60f3d4127435, sni: jgwcc2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-333.5KB/s(Youtube:不良林), server: s1.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s1.upyun.online, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-1.66MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇨🇳 中国-453.3KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇨🇳 中国-11.70MB/s(Youtube:不良林), server: f51e0a98-bc78-4ba2-ba51-74271731fa18.hk.node.touhou.place, port: 563, type: vmess, uuid: 77775b5f-507d-33a3-835b-cb016980d58c, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: f51e0a98-bc78-4ba2-ba51-74271731fa18.hk.node.touhou.place}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-348.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1008.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-196.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.14MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-378.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-438.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-282.5KB/s(Youtube:不良林)
       - 🇭🇰 香港-917.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-524.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-731.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-438.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-515.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-333.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-453.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.70MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-348.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1008.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-196.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.14MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-378.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-438.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-282.5KB/s(Youtube:不良林)
       - 🇭🇰 香港-917.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-524.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-731.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-438.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-515.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-333.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-453.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.70MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-348.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1008.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-196.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.14MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-378.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-438.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-282.5KB/s(Youtube:不良林)
       - 🇭🇰 香港-917.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-524.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-731.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-438.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-515.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-333.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-453.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.70MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
       - 🇭🇰 香港-917.3KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.66MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-348.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1008.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-196.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.14MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-378.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-438.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-282.5KB/s(Youtube:不良林)
       - 🇭🇰 香港-917.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-524.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-731.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-438.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-515.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-333.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-453.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.70MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-348.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1008.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-196.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.14MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-378.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-438.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-282.5KB/s(Youtube:不良林)
       - 🇭🇰 香港-917.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-524.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-731.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-438.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-515.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-333.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-453.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.70MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-348.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1008.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-196.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.14MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-378.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-438.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-282.5KB/s(Youtube:不良林)
       - 🇭🇰 香港-917.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-524.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-731.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-438.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-515.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-333.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-453.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.70MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-348.8KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1008.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-196.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.14MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-378.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-438.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-282.5KB/s(Youtube:不良林)
       - 🇭🇰 香港-917.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-524.9KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-731.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-438.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-515.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-333.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-453.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.70MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
