--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-282.5KB/s(Youtube:不良林), server: 23.19.26.204, port: 55212, type: vmess, uuid: bb8a118d-dd20-4146-a989-2e24f1576b15, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /r76ofJah/, ws-headers: {Host: 23.19.26.204}}
-  - {name: 🇭🇰 香港-917.3KB/s(Youtube:不良林), server: 511hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 511hk.fans8.xyz}}
-  - {name: 🇷🇺 俄罗斯联邦-524.9KB/s(Youtube:不良林), server: 213.183.53.177, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
-  - {name: 🇸🇬 新加坡-731.7KB/s(Youtube:不良林), server: 129.226.93.161, port: 40236, type: vmess, uuid: 931416fe-98f2-4098-c8e7-3634e27ce6f4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-438.2KB/s(Youtube:不良林), server: 45.61.173.125, port: 31224, type: vmess, uuid: b8aaa6e1-f0b3-b9ec-3dfc-bb226c167b33, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-515.6KB/s(Youtube:不良林), server: jgwcc2.gaox.ml, port: 443, type: trojan, password: 9c822f05-cfdc-479a-9534-60f3d4127435, sni: jgwcc2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-333.5KB/s(Youtube:不良林), server: s1.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s1.upyun.online, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-1.66MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇨🇳 中国-453.3KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇨🇳 中国-11.70MB/s(Youtube:不良林), server: f51e0a98-bc78-4ba2-ba51-74271731fa18.hk.node.touhou.place, port: 563, type: vmess, uuid: 77775b5f-507d-33a3-835b-cb016980d58c, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: f51e0a98-bc78-4ba2-ba51-74271731fa18.hk.node.touhou.place}}
+  - {name: 🇨🇳 中国-284.5KB/s(Youtube:不良林), server: 523hk1.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 523hk1.fans8.xyz}}
+  - {name: 🇭🇰 香港-976.1KB/s(Youtube:不良林), server: 511hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 511hk.fans8.xyz}}
+  - {name: 🇸🇬 新加坡-2.58MB/s(Youtube:不良林), server: 129.226.213.30, port: 35006, type: vmess, uuid: 1bdeedc8-ab5d-4d0e-ce89-72a8deb80b64, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.68MB/s(Youtube:不良林), server: 129.150.61.170, port: 29493, type: vmess, uuid: ac0d0076-93d2-48ad-ba6e-ea5c8d7b0132, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 129.150.61.170}}
+  - {name: 🇬🇧 英国-2.92MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.72MB/s(Youtube:不良林), server: 159.223.93.179, port: 80, type: vmess, uuid: 23734aa1-5de0-465f-9662-4f0239b31d9f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 159.223.93.179}}
+  - {name: 🇭🇰 香港-784.8KB/s(Youtube:不良林), server: twsxxnjp.158801.xyz, port: 30913, type: trojan, password: 4b5a0665-8936-49ba-9bb7-d1084e35fb79, sni: twsxxnjp.158801.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.48MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-11.88MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.42MB/s(Youtube:不良林), server: fhcarm2.gaox.ml, port: 443, type: trojan, password: f39bd244-f5fe-415c-8b98-a1e5250bf178, sni: fhcarm2.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-282.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-917.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-524.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-731.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-438.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-515.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-333.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-453.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-284.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-976.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.68MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
+      - 🇭🇰 香港-784.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.48MB/s(Youtube:不良林)
+      - 🇯🇵 日本-11.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.42MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-282.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-917.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-524.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-731.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-438.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-515.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-333.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-453.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-284.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-976.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.68MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
+      - 🇭🇰 香港-784.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.48MB/s(Youtube:不良林)
+      - 🇯🇵 日本-11.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.42MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-282.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-917.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-524.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-731.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-438.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-515.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-333.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-453.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-284.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-976.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.68MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
+      - 🇭🇰 香港-784.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.48MB/s(Youtube:不良林)
+      - 🇯🇵 日本-11.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.42MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-917.3KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.66MB/s(Youtube:不良林)
+      - 🇭🇰 香港-976.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-784.8KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-282.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-917.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-524.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-731.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-438.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-515.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-333.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-453.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-284.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-976.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.68MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
+      - 🇭🇰 香港-784.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.48MB/s(Youtube:不良林)
+      - 🇯🇵 日本-11.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.42MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-282.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-917.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-524.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-731.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-438.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-515.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-333.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-453.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-284.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-976.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.68MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
+      - 🇭🇰 香港-784.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.48MB/s(Youtube:不良林)
+      - 🇯🇵 日本-11.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.42MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-282.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-917.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-524.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-731.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-438.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-515.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-333.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-453.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-284.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-976.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.68MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
+      - 🇭🇰 香港-784.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.48MB/s(Youtube:不良林)
+      - 🇯🇵 日本-11.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.42MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-282.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-917.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-524.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-731.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-438.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-515.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-333.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-453.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-284.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-976.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.68MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.92MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
+      - 🇭🇰 香港-784.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.48MB/s(Youtube:不良林)
+      - 🇯🇵 日本-11.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.42MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
