--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-284.5KB/s(Youtube:不良林), server: 523hk1.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 523hk1.fans8.xyz}}
-  - {name: 🇭🇰 香港-976.1KB/s(Youtube:不良林), server: 511hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 511hk.fans8.xyz}}
+  - {name: 🇸🇬 新加坡-1.18MB/s(Youtube:不良林), server: 129.226.93.161, port: 40236, type: vmess, uuid: 931416fe-98f2-4098-c8e7-3634e27ce6f4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-754.6KB/s(Youtube:不良林), server: 129.226.214.30, port: 36067, type: vmess, uuid: 26feaed3-6918-4600-d9cd-45a678d79c3a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-351.8KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇨🇳 台湾-1.66MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
   - {name: 🇸🇬 新加坡-2.58MB/s(Youtube:不良林), server: 129.226.213.30, port: 35006, type: vmess, uuid: 1bdeedc8-ab5d-4d0e-ce89-72a8deb80b64, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.68MB/s(Youtube:不良林), server: 129.150.61.170, port: 29493, type: vmess, uuid: ac0d0076-93d2-48ad-ba6e-ea5c8d7b0132, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 129.150.61.170}}
-  - {name: 🇬🇧 英国-2.92MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
   - {name: 🇺🇸 美国-3.72MB/s(Youtube:不良林), server: 159.223.93.179, port: 80, type: vmess, uuid: 23734aa1-5de0-465f-9662-4f0239b31d9f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 159.223.93.179}}
   - {name: 🇭🇰 香港-784.8KB/s(Youtube:不良林), server: twsxxnjp.158801.xyz, port: 30913, type: trojan, password: 4b5a0665-8936-49ba-9bb7-d1084e35fb79, sni: twsxxnjp.158801.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-4.48MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-284.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-976.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.18MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-754.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-351.8KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.66MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.68MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.92MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
       - 🇭🇰 香港-784.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.48MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-284.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-976.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.18MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-754.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-351.8KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.66MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.68MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.92MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
       - 🇭🇰 香港-784.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.48MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-284.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-976.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.18MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-754.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-351.8KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.66MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.68MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.92MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
       - 🇭🇰 香港-784.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.48MB/s(Youtube:不良林)
@@ -66,7 +66,7 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-976.1KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.66MB/s(Youtube:不良林)
       - 🇭🇰 香港-784.8KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
@@ -74,11 +74,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-284.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-976.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.18MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-754.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-351.8KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.66MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.68MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.92MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
       - 🇭🇰 香港-784.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.48MB/s(Youtube:不良林)
@@ -89,11 +89,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-284.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-976.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.18MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-754.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-351.8KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.66MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.68MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.92MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
       - 🇭🇰 香港-784.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.48MB/s(Youtube:不良林)
@@ -105,11 +105,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-284.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-976.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.18MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-754.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-351.8KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.66MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.68MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.92MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
       - 🇭🇰 香港-784.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.48MB/s(Youtube:不良林)
@@ -130,11 +130,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-284.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-976.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.18MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-754.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-351.8KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.66MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.68MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.92MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.72MB/s(Youtube:不良林)
       - 🇭🇰 香港-784.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.48MB/s(Youtube:不良林)
